<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MetasRefeicao"
    android:background="@drawable/bg">


    <TextView
        android:id="@+id/textPeqAlmoco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:alpha="0.9"
        android:background="@android:color/white"
        android:padding="12dp"
        android:text="@string/texto_peq_almoco"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valorPeqAlmoco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:alpha="0.9"
        android:background="@android:color/white"
        android:gravity="end"
        android:padding="12dp"
        android:text="25%"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textPeqAlmoco"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/valorPeqAlmoco"
        app:layout_constraintStart_toStartOf="@+id/textPeqAlmoco"
        app:layout_constraintTop_toBottomOf="@+id/valorPeqAlmoco" />

    <TextView
        android:id="@+id/textAlmoco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:padding="12dp"
        android:text="@string/texto_almoco"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0.9"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/valorAlmoco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/white"
        android:padding="12dp"
        android:text="25%"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textAlmoco"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:alpha="0.9"
        android:gravity="end"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/valorAlmoco"
        app:layout_constraintStart_toStartOf="@+id/textAlmoco"
        app:layout_constraintTop_toBottomOf="@+id/valorAlmoco" />

    <TextView
        android:id="@+id/textLanche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:padding="12dp"
        android:text="@string/texto_lanche"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0.9"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/valorLanche"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/white"
        android:padding="12dp"
        android:text="25%"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textLanche"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:alpha="0.9"
        android:gravity="end"/>

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/valorLanche"
        app:layout_constraintStart_toStartOf="@+id/textLanche"
        app:layout_constraintTop_toBottomOf="@+id/valorLanche" />

    <TextView
        android:id="@+id/textJantar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:padding="12dp"
        android:text="@string/texto_jantar"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        android:alpha="0.9"/>

    <TextView
        android:id="@+id/valorJantar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/white"
        android:padding="12dp"
        android:text="25%"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textJantar"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        android:gravity="end"
        android:alpha="0.9"/>

    <TextView
        android:id="@+id/textErro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/aviso_soma_refeicoes"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valorJantar"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>